@@ -45,7 +45,7 @@ ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_SCHEMA_TYPE_REQUIRED = Invalid parameter
 
 ERROR_TOOL_AGENT_APP_NAME_EXTENDED_ATTRIBUTE_REQUIRED = Extended attribute with name "AppName" has to be defined
 
-ERROR_TOOL_AGENT_BSH_OR_JS_SCRIPT_PARAMETER_REQUIRED = Script for the interpreter has to be defined (Extended attribute with name "AppName" or "Script" has to be defined)
+ERROR_TOOL_AGENT_BSH_OR_JS_SCRIPT_PARAMETER_REQUIRED = Script for the interpreter has to be defined (FormalParameter with Id "Script" or Extended attribute with name "AppName" or "Script" has to be defined)
 
 ERROR_TOOL_AGENT_CHECK_DOCUMENT_FORMATS_MISSING_REQUIRED_PARAMETERS = Missing required formal parameters. Parameters with Id "ALLOWED_DOCUMENT_FORMATS" and "UNSUPPORTED_DOCUMENT_IDS" have to be defined
 
