@@ -1,4 +1,8 @@
 ###### TWE 5.1-3 RELEASED ######
+2015-06-02 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode:
+      - BeanShell and JavaScript tool agent are now allowed to have FormalParameter "Script" which is used to define script to execute in the case extended attributes "AppName" or "Script" are not defined
+
 2015-05-27 Sasa Bojanic <sasaboy@together.at>
    # Shark mode:
       - supported new (I18n related) extended attributes: 
